--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,8 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.6.0-alpha03'
 
+    // viewmodels and livedata
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0-alpha05"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.0-alpha05"
+
 }
