--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
@@ -55,5 +56,9 @@ dependencies {
     // viewmodels and livedata
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0-alpha05"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.0-alpha05"
+
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
+
 
 }
